--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "vue-template-compiler": "^2.6.12"
     },
     "dependencies": {
+        "material-design-icons-iconfont": "^6.1.0",
         "vue-router": "^3.5.1",
         "vuetify": "^2.4.11"
     }
